--- a/package.json
+++ b/package.json
@@ -10,18 +10,26 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@firebase/auth": "^1.3.0",
+    "@react-native-firebase/app": "^18.4.0",
+    "@react-native-firebase/auth": "^18.4.0",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.11",
     "expo-cli": "^6.3.10",
     "expo-constants": "^14.4.2",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.4.0",
     "formik": "^2.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-picker-select": "^8.1.0",
+    "react-native-radio-buttons-group": "^3.0.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-web": "~0.19.6",
     "styled-components": "^6.0.8"
   },
