--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@firebase/auth": "^1.3.0",
+    "@react-native-community/slider": "^4.4.3",
     "@react-native-firebase/app": "^18.4.0",
     "@react-native-firebase/auth": "^18.4.0",
     "@react-native-picker/picker": "2.4.10",
