--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-native-community/slider": "4.4.2",
     "@react-native-firebase/app": "^18.4.0",
     "@react-native-firebase/auth": "^18.4.0",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.18",
