--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-calendars": "^1.1301.0",
     "react-native-picker-select": "^8.1.0",
     "react-native-radio-buttons-group": "^3.0.3",
     "react-native-safe-area-context": "4.6.3",
