--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/slider": "4.4.2",
-    "@react-native-firebase/app": "^18.4.0",
     "@react-native-firebase/auth": "^18.4.0",
+    "@react-native-firebase/messaging": "^18.6.1",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -43,7 +43,9 @@
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-firebase/app": "^18.6.1",
+    "jest": "^29.7.0"
   },
   "private": true
 }
